set auth and complite all part for task

--- a/sample.env
+++ b/sample.env
@@ -11,6 +11,12 @@ NUM_ALLOWED_TASK=5
 
 MONGO_HOST="localhost"
 MONGO_PORT=27017
-MONGO_PASS=  "secret"
+MONGO_PASS=  "pass"
 MONGO_USER= "admin"
 MONGO_URI=  "mongodb://localhost:27017/task_manager"
+
+
+SECRET_KEY = "your_secret_key"
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
+REFRESH_TOKEN_EXPIRE_DAYS = 7
